--- a/echarts+bmap.html
+++ b/echarts+bmap.html
@@ -21,20 +21,21 @@
         <div id="title2">
             100卡口车流量数据统计<br>
         </div>
-        <div id="title3">
-            <h3>&nbsp;&nbsp;监<br>&nbsp;&nbsp;测<br>&nbsp;&nbsp;站<br>&nbsp;&nbsp;点<br>&nbsp;&nbsp;污<br>&nbsp;&nbsp;染<br>&nbsp;&nbsp;数<br>&nbsp;&nbsp;据</h3>
-        </div>
-        <div id="title4">
-            <h3>&nbsp;空<br>&nbsp;气<br>&nbsp;指<br>&nbsp;标<br>&nbsp;时<br>&nbsp;变<br>&nbsp;过<br>&nbsp;程</h3>
-        </div>
+<!--        <div id="title3">-->
+<!--            <h3>&nbsp;&nbsp;监<br>&nbsp;&nbsp;测<br>&nbsp;&nbsp;站<br>&nbsp;&nbsp;点<br>&nbsp;&nbsp;污<br>&nbsp;&nbsp;染<br>&nbsp;&nbsp;数<br>&nbsp;&nbsp;据</h3>-->
+<!--        </div>-->
+<!--        <div id="title4">-->
+<!--            <h3>&nbsp;空<br>&nbsp;气<br>&nbsp;指<br>&nbsp;标<br>&nbsp;时<br>&nbsp;变<br>&nbsp;过<br>&nbsp;程</h3>-->
+<!--        </div>-->
         <div id="timechange" class="item"></div>
         <div id="radarChart" class="item"></div>
         <div id="chart" class="item"></div>
+
         <div id="echarts_bmap" class="item"></div>
     </div>
 
     <script src="js/timechange.js"></script>
-    <script src="js/radarChart.js"></script>
+    <script src="js/平行坐标图.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/map.js"></script>
 </body>
