--- a/echarts+bmap.html
+++ b/echarts+bmap.html
@@ -8,8 +8,6 @@
     <script src="./js/bmap.min.js"></script>
     <script type="text/javascript" src="//api.map.baidu.com/api?v=3.0&ak=xa1xOaW0OtUUPTazidupi8QngTjhe6m7"></script>
     <script src="./js/d3.min.js"></script>
-
-    <!-- 引入外部CSS文件 -->
     <link rel="stylesheet" type="text/css" href="./css/ksh.css">
 </head>
 
@@ -21,14 +19,10 @@
         <div id="title2">
             100卡口车流量数据统计<br>
         </div>
-<!--        <div id="title3">-->
-<!--            <h3>&nbsp;&nbsp;监<br>&nbsp;&nbsp;测<br>&nbsp;&nbsp;站<br>&nbsp;&nbsp;点<br>&nbsp;&nbsp;污<br>&nbsp;&nbsp;染<br>&nbsp;&nbsp;数<br>&nbsp;&nbsp;据</h3>-->
-<!--        </div>-->
-<!--        <div id="title4">-->
-<!--            <h3>&nbsp;空<br>&nbsp;气<br>&nbsp;指<br>&nbsp;标<br>&nbsp;时<br>&nbsp;变<br>&nbsp;过<br>&nbsp;程</h3>-->
-<!--        </div>-->
+
         <div id="timechange" class="item"></div>
-        <div id="radarChart" class="item"></div>
+        <div id="radarChart" class="item">
+        </div>
         <div id="chart" class="item"></div>
 
         <div id="echarts_bmap" class="item"></div>
